# file-explorer

./: .gitignore  api.dockerfile  docker-compose.yml  site.dockerfile
components/api/: Cargo.toml
components/api/src/: main.rs
components/api/src/routes/: Index.rs  lib.rs
components/web/: package-lock.json  package.json
components/web/src/: index.js
