[package]
name = "api"
version = "0.1.0"
authors = ["matthewthechickenman <65732060+matthewthechickenman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.0"
actix-web = "3.3.2"